# tessera-physical

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_csv.py  demo_platform.py  demo_sync.py  demo_telemetry.py
tessera/: __init__.py  client.py  ingest.py  lake.py  ontology.py  server.py  sync.py
tests/: test_ingest.py  test_lake.py  test_ontology.py  test_server.py  test_sync.py
